<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MyOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/colorBackground"
        app:titleMarginStart="80dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back"
        app:title="@string/order_cofirmation"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="23sp"
                android:layout_marginStart="10dp"
                android:text="@string/your_infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:text="@string/username"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_tennguoidung"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/app_name"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:text="@string/hint_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:id="@+id/edittext_diachilienhe"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/email_demo"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="23sp"
                android:layout_marginStart="10dp"
                android:text="@string/infor_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                app:cardElevation="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:textSize="30sp"
                            android:text="@string/my"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:text="@string/order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:gravity="end|center_vertical"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/textview_ngaythang"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorText"
                                android:layout_marginStart="5dp"
                                android:text="@string/datetime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/textview_giophut"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorText"
                                android:text="@string/time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:text="@string/order_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_iddathang"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/number"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:text="@string/delivery_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:inputType="number"
                            android:id="@+id/edittext_thoigiangiaohang"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/delivery"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="#B6B4B4"
                            android:text="@string/payment_method"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_phuongthucthanhtoan"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/method"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageButton
                            android:id="@+id/imagebutton_googlemap"
                            android:background="@color/colorAccent"
                            android:layout_width="110dp"
                            android:layout_height="110dp"/>
                        <LinearLayout
                            android:layout_marginStart="10dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorText"
                                android:text="@string/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:id="@+id/edittext_diachi"
                                android:hint="@string/hint_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAllCaps="true"
                            android:layout_weight="1"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:text="@string/total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/textview_tongtien"
                            android:textSize="25sp"
                            android:layout_gravity="end|center_vertical"
                            android:text="@string/price"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_thanhtoan"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/payment"
                    android:background="@drawable/custom_button_continue"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_menuorder"
                    android:textStyle="bold"
                    android:textColor="@color/colorBackground"
                    android:background="@drawable/custom_button_chon"
                    android:text="@string/menu"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>