<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.appcompat.widget.Toolbar
            android:background="@color/colorBackground"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_black"
            app:title="@string/detail_dish"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:background="@color/colorAccent"
            android:id="@+id/imageview_anh"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:id="@+id/textview_tenmonan"
            android:textSize="23sp"
            android:textColor="@color/colorText"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:layout_weight="1"
                android:text="@string/price_dish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginEnd="20dp"
                android:id="@+id/textview_gia"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:text="@string/material_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16sp"
                android:id="@+id/textview_nguyenlieu"
                android:text="@string/material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:textColor="@color/colorText"
            android:textSize="23sp"
            android:layout_margin="10dp"
            android:text="@string/material_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:src="@drawable/ic_baseline_add"
                android:id="@+id/imagebutton_them"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textview_soluong"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textAlignment="center"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:src="@drawable/ic_baseline_remove"
                android:id="@+id/imagebutton_giam"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:textColor="@color/colorBackground"
            android:layout_gravity="bottom"
            android:id="@+id/button_giohang"
            android:text="@string/add_to_cart"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button_chon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
